# fastapi-app

./: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/common/: authentication.py  permissions.py  response.py
app/common/security/: credential.py
app/config/: application.py  exception_handlers.py  settings.py
app/config/connection/: __init__.py  postgres.py
app/config/logging/: config.py  filters.py  trace.py
app/config/middlewares/: logging.py
app/config/security/: jwt.py
app/model/: auth.py  base.py  order.py  product.py
app/model/repository/: auth.py  base.py  order.py  order_item.py  product.py  product_item.py
app/router/: __init__.py  auth.py  order.py  product.py
app/schemas/: auth.py  order.py
app/service/: login.py  order.py  product.py  register.py
conf/: nginx.conf
tests/: conftest.py  test_auth.py  test_order.py  test_product.py
