[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI Application for Server Performance Testing"
authors = ["miintto <miintto.log@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.29.0"
bcrypt = "^4.1.3"
ecs-logging = "^2.2.0"
fastapi = "^0.111.0"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.3.4"
pyjwt = "^2.8.0"
sqlalchemy = "^2.0.31"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
